# achivit_rs

./: .env_example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  env_example  init_db.sh  log4rs.yml
.github/workflows/: ci.yml  tests.yml
.sqlx/: query-2590fe148100e81172c331ec66a8535201009710e51116f5a777b3dac5e7b992.json  query-3a2d46e43b166921a97f49e39707fb79bede3883972f6d6575cba0bba871bfa8.json  query-5668a86074f9064b3bba7bc5ba297aa54e7b382be4c12ba652f3cb54f7749371.json  query-5906569299735a2bfa551445b15463fe00d6752aedc2d042fcb9d23f55a6e283.json  query-7318f9ddc72e066d02b5fef7bfd90fd626da0f4b1357a634baa35e919608e0b2.json  query-73e0f4efa2f5ef23bfb01dfd0446784b35431384c6c95a617faa5839b5d51bd5.json  query-74156d21a577083f1d37d21d132a939d55d83a257bb774b063493ad01d7fe39e.json  query-8060d72358540681b921692fe11bfe5cc23b4a0796d4a3b7b665f2c0a5b4afc2.json  query-86296f1f0d6c4678fab619373969e26b1dc04f24deb470aca667ebc64fdb7a7f.json  query-8e2e05b7f5cddd6304adde46e00da8fb4a312e8a7a8d906118607e8c7a067325.json  query-a396885c9638c5cc456aff1f5906dd4bc25acba71ff9cb448028ce5c9ed13cd8.json  query-a6af528a37dbdea6179eff366d3144a3fa2d146411d9fdff2baef864a55a2f56.json  query-b18325e2516cd2c2a4833015e437e3337dd0b2a92be979d4470be571ea62baee.json  query-b70274081036e94af97387ef1fe9fa8c8ef058e4a3e56bd94a5cd17078b06b5f.json  query-be20e3dfb5fe544823e34e7a45c0f4d02e7bafd3cef962167cb93d91c66e0c42.json  query-c8eaea61e7c2625560869b77f26dafe173a0df9e9f7ad0e48d2180f8ebc780ac.json  query-c8fd5753dc2c4829916d0708b641f4f58eaec4a14f0f38b9dadcb4fbe04b5535.json  query-ca462985e2b1ae7aebfaa1da041e8359e1cdd2634584ed5f4b39ed4ff58ceece.json  query-d5a54c01a62ce978dc0da0c429396d5a0011c1f73a44926cf7f9af72378019fb.json  query-d8886d159eef9a531d874cca93b0a448a2d0dba6b162df19e1d29bf14e2885e8.json  query-de083c9822e65afebd3412b282616db78b51a849da9d3b2efcd920d9da12bf16.json  query-ded006324705586362fcf8d3fa3c9adfe31e73d7d89d143403f6dab46d029d16.json  query-e40c9f4a7fa165f1e9be571ffba17a70a75074715740176ae0eb2f8d5df02a67.json  query-eead9e67eea4935d1705f78a65c8af4da6f456e0f68a0ab53c56160bc625faf8.json  query-eef861dc38d2b602c9baebb0d8b98cf0a20740c51ebc7dd847507362ee383018.json
JSONS/: InnList.json  ascendancies.json  roles.json
dfelp/: Cargo.toml
dfelp/src/: lib.rs  lookup.rs  parsing.rs  requests.rs  rng.rs  time.rs  wiki.rs
dfelp/tests/: test.rs  wiki_test.rs
htmls/: 3ach.html  dn12-15.html  dn12-22.html  flash_ruleofnine.html  just_name.html  mof.html  ruleofnine.html
src/: challenge.rs  db.rs  dev_tools.rs  embeds.rs  error.rs  error_handler.rs  event_handler.rs  guild_settings.rs  init_db.rs  lib.rs  lookup_df.rs  main.rs  manage_users.rs  mech_aqw_lookup.rs  paginate.rs  parsing.rs  requests.rs  requirements.rs  rng.rs  roles.rs  roles_extended.rs  sheets.rs  time.rs  update_checker.rs  wiki.rs
src/df/: wiki.rs
tests/: banner_test.rs  endgame_wiki.rs  innlist.rs  parsing_test.rs  reqwest-test.rs  roles_inn_test.rs  update_test.rs
