[package]
name = "achivit_rs"
version = "0.5.0"
edition = "2021"
authors = ["Ruleofnine"]

[[bin]]
name = "achivit_rs"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
poise = "0.5.6"
serenity = {version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
color-eyre = "0.6.2"
reqwest = {version ="0.11.20", features = ["json"]}
chrono = "0.4.31"
ego-tree = "0.6.2"
thiserror = "1.0.49"
anyhow = "1.0.75"
sqlx = { version = "0.7.2", features = ["postgres","runtime-tokio","chrono","macros"] }
regex = "1.10.2"
scraper = "0.18.1"
num-format = "0.4.4"
serde_json = "1.0.108"
rand = "0.8.5"
serde_derive = "1.0.193"
serde = "1.0.193"
rust_xlsxwriter = "0.56.0"
