[package]
name = "achivit_rs"
version = "0.7.4"
edition = "2021"
authors = ["Ruleofnine"]
repository = "https://github.com/Ruleofnine/achivit_rs"
license = "MIT"
default-run = "achivit_rs"
description = "Discord Bot for Dragonsgrasp"

[[bin]]
name = "achivit_rs"
path = "src/main.rs"
[lib]
name = "achivit_rs"
path = "src/lib.rs"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[features]
reqwest-tests = []
rust-analyzer = []

[dependencies]
dotenv = "0.15.0"
log = "0.4.20"
poise = "0.5.6"
serenity = {version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["full"] }
color-eyre = "0.6.2"
reqwest = {version ="0.11.20", features = ["json"]}
chrono = "0.4.31"
thiserror = "1.0.49"
anyhow = "1.0.75"
sqlx = { version = "0.7.2", features = ["postgres","runtime-tokio","chrono","macros"] }
regex = "1.10.2"
scraper = "0.18.1"
num-format = "0.4.4"
serde_json = "1.0.108"
rand = "0.8.5"
serde_derive = "1.0.193"
serde = "1.0.193"
rust_xlsxwriter = "0.56.0"
getset = "0.1.2"
log4rs = "1.3.0"

[build-dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = ["postgres","runtime-tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
