[package]
name = "dfelp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
env_logger = "0.10.0"
log = "0.4.20"
reqwest = {version ="0.11.20", features = ["json"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
chrono = "0.4.31"
num-format = "0.4.4"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
regex = "1.9.5"
thiserror = "1.0.49"
scraper = "0.18.1"
